changes UI to advance and robotic, cleaning done for data_offers, offers, and packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,13 @@ sentence-transformers
 huggingface-hub
 python-dotenv
 qdrant-client
+
+flask
+langchain
+langchain-community
+langchain-huggingface
+faiss-cpu
+sentence-transformers
+huggingface-hub
+torch
+ollama
