--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,12 @@ async-timeout==4.0.3
 aiosignal==1.3.2
 frozenlist==1.6.0
 
+# additional libraries for roman urdu
+indicnlp
+indic-nlp-library
+translatepy
+langdetect
+
 # Embeddings and vector store
 sentence-transformers==4.1.0
 huggingface-hub==0.32.2
